<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/b_sheet_ExpandedToolbar" />

    <LinearLayout
        android:id="@+id/b_sheet_ExpandedToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/secondaryColor"
        android:elevation="4dp"
        android:weightSum="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnMinimizeToolbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_minimize" />

        <TextView
            android:id="@+id/txtCurrPlaying"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/now_playing"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/small_text" />

        <ImageButton
            android:id="@+id/btnSongList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_menu" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <ImageView
        android:id="@+id/musicCoverPic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="@id/guideline13"
        app:layout_constraintStart_toStartOf="@id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        android:contentDescription="Music Cover"
        android:scaleType="fitCenter"
        android:src="@mipmap/default_cover_round" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewForSong"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:background="@color/backgroundColor"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintEnd_toEndOf="@id/guideline14"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintBottom_toBottomOf="@id/guideline6">

        <RelativeLayout
            android:id="@+id/relativeLayoutCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/txtSongName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/in_motion"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/text_thin" />

                <TextView
                    android:id="@+id/txtSongArtistName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtSongName"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/trent_renzor_and_atticus_ross"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/radius_small" />

                <ToggleButton
                    android:id="@+id/btnFav"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/fav_selector"
                    android:textOff=""
                    android:textOn="" />

            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <SeekBar
        android:id="@+id/controlSeekBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:background="@android:color/transparent"
        android:paddingVertical="4dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:progress="20"
        android:progressDrawable="@drawable/seekbar_style"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintEnd_toEndOf="@id/guideline14"
        app:layout_constraintHeight_percent="0.028"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintBottom_toBottomOf="@id/guideline7"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteText"
        android:text="00:00"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="05:00"
        android:textAlignment="viewEnd"
        android:textColor="@color/whiteText"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        app:layout_constraintEnd_toEndOf="@+id/controlSeekBar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <ToggleButton
        android:id="@+id/btnControlShuffle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:background="@drawable/shuffle_selector"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/btnPrevControl"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintWidth_percent="0.07"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <ImageButton
        android:id="@+id/btnPrevControl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintWidth_percent="0.1"
        android:background="@drawable/shape_prev_next_background"
        android:contentDescription="@string/previous_song"
        android:src="@drawable/ic_previous_control"
        app:layout_constraintEnd_toStartOf="@+id/btnPlayPauseControl"
        app:layout_constraintStart_toEndOf="@+id/btnControlShuffle"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintBottom_toBottomOf="@id/guideline10"/>

    <ToggleButton
        android:id="@+id/btnPlayPauseControl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintWidth_percent="0.16"
        android:background="@drawable/play_pause_selector"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toStartOf="@+id/btnNextControl"
        app:layout_constraintStart_toEndOf="@+id/btnPrevControl"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintBottom_toBottomOf="@id/guideline10"/>

    <ImageButton
        android:id="@+id/btnNextControl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintWidth_percent="0.1"
        android:background="@drawable/shape_prev_next_background"
        android:contentDescription="@string/next_song"
        android:src="@drawable/ic_next_control"
        app:layout_constraintEnd_toStartOf="@+id/btnRepeatControl"
        app:layout_constraintStart_toEndOf="@+id/btnPlayPauseControl"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintBottom_toBottomOf="@id/guideline10"/>

    <com.projects.musicplayer.uicomponents.RepeatTriStateButton
        android:id="@+id/btnRepeatControl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintWidth_percent="0.07"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNextControl"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>